--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -77,6 +77,7 @@
               <span class="navbar-brand d-flex align-items-center">
                 <strong>Fachschaft MPI</strong>
               </span>
+                <a class="nav-link" href="http://apps.fsmpi.lan:8080">Login</a>
             </div>
           </div>
         </header>
